# InternalCompilerErrorAgain

./: .gitignore
.github/workflows/: cmake.yml
NativeDll/: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
NativeDll/source/: CMakeLists.txt  the_module.ixx  utils.ixx
